examples/c/error-codes/violates-constraint/fatal/CV-CER1-bad-static.output
CV-CER1-bad-static.c:16:2: error: Unary '&' operator applied to non-lvalue.
  Constraint violation (CV-CER1).
   see C11 section 6.5.3.2:1 http://rvdoc.org/C11/6.5.3.2
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
   see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
kcc -d CV-CER1-bad-static.c
